# DungeonMaster

./: .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.gpu.yml  docker-compose.yml  start-lan.bat  start.bat
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 8dfce592ee33_initial_schema.py
backend/app/: __init__.py  config.py  db.py  main.py  repository.py
backend/app/api/: storage.py
backend/app/models/: __init__.py  database.py  enums.py  schemas.py
backend/app/services/: dice.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_api_auth.py  test_api_avatar.py  test_api_campaigns.py  test_api_character_import.py  test_api_characters.py  test_api_game.py  test_api_maps.py  test_api_srd.py  test_api_srd_chargen.py  test_api_vision.py  test_auto_save.py  test_full_stack.py  test_ws_audio.py  test_ws_game.py  test_ws_map.py
backend/tests/unit/: conftest.py  conftest_db.py  test_abilities.py  test_anthropic_adapter.py  test_board_vision.py  test_character_import.py  test_combat.py  test_conditions.py  test_database_models.py  test_dice.py  test_expressions.py  test_game_manager.py  test_game_state.py  test_gemini_adapter.py  test_llm_base.py  test_models.py  test_narrator.py  test_npc_extraction.py  test_ollama_adapter.py  test_openai_adapter.py  test_prompts.py  test_rules_engine.py  test_smoke.py  test_spells.py  test_srd_data.py  test_srd_lookup.py  test_stt.py  test_summary.py  test_tts.py  test_turns.py  test_vad.py  test_vision_sync.py  (+1 more)
(+167 files in other folders)
